--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     </div>
     <div id="game-container"></div>
     <script src="logic.js"></script>
+    <!-- <script src="logic2.js"></script> -->
+
 </body>
 </html>
