add moves functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <div id="score-container">
         Score : <span id="score">0</span>
     </div>
+    <div>
+        <div id="moves-container">Moves Left : <span id="remaining-moves">20</span> 
+        <div id="target"> Target Score:300</div>  
+    </div>
     <div id="game-container"></div>
     <script src="logic.js"></script>
     <!-- <script src="logic2.js"></script> -->
