--- a/start.html
+++ b/start.html
@@ -13,7 +13,7 @@
     </div>
     <script> 
     function openFile() 
-    { window.location.href = 'index.html';} 
+    { window.location.href = 'instructions.html';} 
      </script>
 </body>
 </html>
